--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,13 @@
   <link rel="apple-touch-icon" href="images/tb.png" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <meta name="apple-mobile-web-app-title" content="Rosco" />
+  <meta name="apple-mobile-web-app-title" content="jess" />
   <meta name="theme-color" content="#39c16c" />
-  <meta name="description" content="Rosco" />
+  <meta name="description" content="jess" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
-  <title>Rosco</title>
+  <title>Jess</title>
 </head>
 
 <body>
